# GenoTracker

./: .gcloudignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.fastapi  Dockerfile.streamlit  LICENSE  README.md  app-fastapi.yaml  app-streamlit.yaml  app.yaml  crud.py  data_proc.ipynb  database.py  docker-compose.yml  load_data.py  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.devcontainer/: devcontainer.json
backend/: Dockerfile  app-fastapi.yaml  main.py  requirements.txt
backend/database/: crud.py  load_data.py
database/: crud.py  database.py  load_data.py
fastapi_service/: Dockerfile  app.yaml  main.py
frontend/: Dockerfile  app-streamlit.yaml  app.py
genotracker/: main.py
genotracker/api/: endpoints.py
genotracker/frontend/: streamlit_app.py
genotracker/frontend/pages/: main_streamlit.py
genotracker/models/: __init__.py  data_models.py
genotracker/services/: data_service.py
genotracker/tests/: test_data_service.py  test_main.py
scripts/: cloud_run_deploy.sh  test_request.py
streamlit_service/: Dockerfile  app.py  app.yaml  requirements.txt  streamlit_tests.py
