[tool.poetry]
name = "genotracker"
version = "0.0.1"
description = ""
authors = ["Dan Vitale <dan@datatecnica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
google-cloud = "^0.34.0"
SQLAlchemy = "^2.0.31"
pydantic = "^2.8.2"
typing = "^3.10.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
