[tool.poetry]
name = "genotracker"
version = "0.1.0"
description = ""
authors = ["dvitale199 <d.vitale199@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
fastapi = "^0.111.0"
streamlit = "^1.36.0"
pytest = "^8.2.2"
httpx = "^0.27.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
